--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,11 +1,20 @@
 .login-wrapper {
     background: none!important;
     justify-content: center;
-    background-color: rgb(0, 0, 0)
+    background-color: black;
+}
+
+.login-wrapper .login {
+  background: rgb(244, 246, 255);
 }
 
 .btn.btn-primary{
     color: black;
     background-color: yellow;
     border-color: yellow;
+}
+
+.welcome {
+  color: #5659b9;
+  font-weight: bold;
 }
