--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,18 @@
 <header class="header header-1">
 
   <div class="branding">
-      <a href="http://jeremy-spring-2018-phortonssf.c9users.io:8081/login" class="nav-link">
+      <a href="https://digitalkyopo.github.io/yolo-stock/login" class="nav-link">
           <clr-icon shape="bullseye"></clr-icon>
           <span class="title">YOLO Stock Finder</span>
       </a>
   </div>
-  
+
   <div class="header-nav">
     <a routerLink="login" class="nav-link nav-text login">Login</a>
     <a routerLink="register" class="nav-link nav-text register">Register</a>
     <a routerLink="search" class="nav-link nav-text">Search</a>
   </div>
-  
+
 </header>
 
 <router-outlet></router-outlet>
