--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,11 +1,11 @@
 .login-wrapper {
-    background: none!important;
+    background: white;
     justify-content: center;
-    background-color: black;
+    background-color: #f4f4f4;
 }
 
 .login-wrapper .login {
-  background: rgb(244, 246, 255);
+  background: white;
 }
 
 .btn.btn-primary{
@@ -15,6 +15,7 @@
 }
 
 .welcome {
-  color: #5659b9;
+  color: #665bff;
   font-weight: bold;
 }
+
