--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,7 +1,7 @@
 .login-wrapper {
-    background: none!important;
-    justify-content: center;
-    background-color: rgb(0, 0, 0)
+  background: white;
+  justify-content: center;
+  background-color: #f4f4f4;
 }
 
 .btn.btn-primary {
@@ -11,6 +11,6 @@
 }
 
 .welcome {
-  color: #5659b9;
+  color: #665bff;
   font-weight: bold;
 }
