--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -4,10 +4,16 @@
     padding: 10px;
 }
 
+.searchHdr {
+  font-size: 34px;
+}
+
 .save.group {
     display: flex;
     justify-content: center;
     margin-top: 15px;
+    padding: 10px;
+    font-size: 16px;
 }
 
 .search.group {
@@ -18,8 +24,9 @@
 .search.input {
     display: flex;
     justify-content: center;
-    padding: 8px;
+    padding: 11px;
     text-align: center;
+    font-size: 28px;
 }
 
 .btn.btn-primary {
@@ -29,22 +36,13 @@
     margin-top: 5px;
 }
 
-.searchInp {
-  padding: 5px;
-}
-
 .searchBtn {
   margin: auto;
-}
-
-.ticker {
-  padding: 10px;
 }
 
 .saveBtn {
   color: black;
   background-color: orange;
   border-color: orange;
-  margin-top: 5px;
   margin: auto;
 }
