--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="search input">
-    <input class="search input" placeholder="?" [(ngModel)]="symbol" (keyup.enter)="search()">
+    <input class="search input" placeholder="...." [(ngModel)]="symbol" (keyup.enter)="search()">
   </div>
 
   <button class='btn btn-primary searchBtn' (click)="search()">Search Ticker</button>
