cleaned some code before working on optimizing stock data

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -12,7 +12,7 @@
     <span *ngFor="let symbol of saveSymbols">{{ symbol }}</span>
   </div>
 
-  <div class="search input">
+  <div class="center">
     <input class="search input" placeholder="...." [(ngModel)]="symbol" (keyup.enter)="search()">
   </div>
 
