--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,7 +1,13 @@
 .search {
     display: flex;
     justify-content: center;
-    padding: 10px;
+    padding: 12px;
+}
+
+.center {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 2em;
 }
 
 .searchHdr {
@@ -24,7 +30,6 @@
 .search.input {
     display: flex;
     justify-content: center;
-    padding: 11px;
     text-align: center;
     font-size: 28px;
 }
